2002-15-20 Glynn Foster <glynn.foster@sun.com>

	* Makefile.am: Diable docs until they are fixed - dtd validation
	problems with scrollkeeper.dtd.

Fri May 17 10:09:46 2002  George Lebl <jirka@5z.com>

	* config.c: add note to translators about fonts, especially about
	  Helvetica vs asian fonts

	* info.c, zoom.c: fix crashes on window closing, also add more
	  elaborate logic for figuring out the size of the label area,
	  still quite stupid, but now it gets it wrong by getting more space
	  rather then less which is nicer.  Also better get single char
	  width info in an uglier, more elaborate and hackish way but
	  in a way that we get more correct.  Some more geometry fixage
	  to get asian fonts right.

Thu May 16 18:39:42 2002  George Lebl <jirka@5z.com>

	* info.c, log_repaint.c, logview.h, misc.c, zoom.c:
	  handle cases where we can't convert the line to utf8.  We can
	  really guess the language anyway though so maybe we could do more.

	* logrtns.c: make sure not to leave other time locales around and
	  fix a leak thus created.

Thu May 16 18:19:59 2002  George Lebl <jirka@5z.com>

	* info.c, log_repaint.c, logrtns.c, logview.h, misc.c, zoom.c:
	  Some i18n fixage, especially with getting utf8 vs locale
	  encoding straight.  It is quite ugly, though now we again read
	  localized logs and don't spew out tons of warnings.  I can't make
	  sure that the problem for Chinese is gone since I think I don't
	  have the right fonts for this.  So I'll mark #81252 as fixed.

Thu May 16 15:20:35 2002  George Lebl <jirka@5z.com>

	* logview.c: make the window and make sure it's shown before opening
	  files since then we look like we are loading faster, especially if
	  your logfile is very long.

Thu May 16 15:09:19 2002  George Lebl <jirka@5z.com>

	* log_repaint.c, zoom.c: partially fix #81252 by converting output
	  of strftime to utf8.  Also convert the string to utf8, this still
	  needs a bit of work, so I'm not closing the bug yet
