@@ -1,3 +1,8 @@
+2002-05-23  Narayana Pattipati <narayana.pattipati@wipro.com>
+
+	* actions.c: Make sure we save the description in the actions
+	dialog. Fixes #82334.
+
 2002-15-20 Glynn Foster <glynn.foster@sun.com>
 
 	* Makefile.am: Diable docs until they are fixed - dtd validation
